# steinbock

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  LICENSE.md  MANIFEST.in  README.md  conftest.py  docker-compose.yml  entrypoint.sh  fixuid.yml  mkdocs.yml  pyproject.toml  requirements-deepcell.txt  requirements-napari.txt  requirements.txt  requirements_deepcell-gpu.txt  requirements_deepcell.txt  requirements_devel.txt  requirements_docs.txt  requirements_test.txt  setup.cfg  setup.py  versions.json
.github/workflows/: build.yml  deploy.yml  docs.yml
docs/: beta-testing.md  changelog.md  directories.md  docker.md  file-types.md  index.md  install-docker.md  install-python.md  install.md  license.md  python.md  requirements.txt  stylesheet.css
docs/2020-04-13_segmentation_day/: beamercolorthemebblab.sty  beamerthemebblab.sty  steinbock.tex
docs/2020-04-20_imaxt_TT2/: eth_uzh_logo_kurz_neg_en.eps  steinbock.tex
docs/cli/: apps.md  classification.md  export.md  intro.md  introduction.md  measurement.md  preprocessing.md  segmentation.md  tools.md  utils.md  visualization.md
docs/install/: docker.md  python.md
docs/python/: api.md  intro.md
docs/segmentation_day/: beamerfontthemebblab.sty  beamerinnerthemebblab.sty  beamerouterthemebblab.sty  steinbock.tex
docs/specs/: directory-structure.md  file-types.md
examples/: 01_preprocessing_if.ipynb  01_preprocessing_if.py  01_preprocessing_imc.ipynb  01_preprocessing_imc.py  02_segmentation_deepcell.ipynb  02_segmentation_deepcell.py  03_measurement.ipynb  03_measurement.py  README.md  download_examples.ipynb  helpers.py  panel.csv  steinbock_preprocessing.ipynb  steinbock_preprocessing.py  steinbock_preprocessing_IF.ipynb  steinbock_preprocessing_IF.py
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/authors/: index.html
latest/changelog/: index.html
latest/contributing/: index.html
latest/contributors/: index.html
latest/directories/: index.html
latest/docker/: index.html
latest/file-types/: index.html
latest/install-docker/: index.html
latest/install-python/: index.html
latest/license/: index.html
latest/python/: index.html
latest/search/: search_index.json
steinbock/: __init__.py  __main__.py  _cli.py  _env.py  _steinbock.py  cli.py  io.py  visualization.py
steinbock/_cli/: __init__.py  _cli.py  apps.py  utils.py  visualization.py
steinbock/classification/: __init__.py  _classification.py  _cli.py
steinbock/export/: _cli.py  data.py  graphs.py
steinbock/graphs/: _cli.py  graphs.py
steinbock/measurement/: __init__.py  _cli.py  _measurement.py  cells.py  data.py  distances.py  graphs.py  intensities.py  neighbors.py  regionprops.py
steinbock/preprocessing/: _cli.py  (+4 more)
test/: test_dummy.py
tests/: requirements.txt  test_io.py  test_viewer.py
v0.10.0/: sitemap.xml
v0.10.1/: requirements.txt
v0.10.2/: 404.html  index.html
v0.10.4/: 404.html
v0.10.5/: sitemap.xml
v0.10.7/: objects.inv
v0.11.0/: requirements.txt  sitemap.xml
v0.12.0/: requirements.txt  sitemap.xml
v0.13.1/: objects.inv
v0.13.2/: 404.html  index.html  sitemap.xml
v0.13.4/: 404.html  index.html
v0.13.5/: 404.html
v0.14.0/: index.html
v0.14.1/: index.html  sitemap.xml
v0.15.0/: 404.html  objects.inv
v0.16.1/: 404.html  index.html
v0.16.3/: 404.html  index.html
v0.16.4/: 404.html  index.html  objects.inv
v0.6.2/: sitemap.xml
v0.7.0/: sitemap.xml
v0.7.2/: 404.html
v0.8.0/: requirements.txt
v0.8.1/: 404.html  sitemap.xml
v0.9.0/: 404.html  index.html
v0.9.1/: 404.html
(+494 files in other folders)
