[metadata]
name = steinbock
url = https://github.com/BodenmillerGroup/steinbock
author = Jonas Windhager
author_email = jonas.windhager@uzh.ch
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
license = MIT
license_files = LICENSE
description = Dockerized multi-channel image processing framework
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Fluidigm, Imaging Mass Cytometry, IMC

[options]
zip_safe = False
install_requires =
    anndata
    click
    fcswrite
    h5py
    networkx
    numpy
    pandas
    pyyaml
    scikit-image
    scipy
    tifffile
    xtiff
python_requires = >=3.8
packages = find:

[options.extras_require]
imc = 
    readimc
deepcell = 
    deepcell
all=
    readimc
    deepcell

[options.entry_points]
console_scripts =
    steinbock = steinbock._cli:steinbock_cmd_group
