[metadata]
name = steinbock
url = https://github.com/BodenmillerGroup/steinbock
author = Jonas Windhager
author_email = jonas.windhager@uzh.ch
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
license = MIT
license_files = LICENSE
description = Dockerized multi-channel image processing framework
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Fluidigm, Imaging Mass Cytometry, IMC

[options]
zip_safe = True
install_requires =
    anndata
    click
    click-log
    fcswrite
    h5py
    imageio
    networkx
    numpy
    opencv-python-headless
    pandas
    scikit-image
    scipy
    tifffile
    xtiff
python_requires = >=3.8
packages = find_namespace:

[options.packages.find]
include = steinbock

[options.package_data]
steinbock = **/data/*

[options.extras_require]
imc = 
    readimc
deepcell = 
    deepcell
    pyyaml
all=
    readimc
    deepcell
    pyyaml

[options.entry_points]
console_scripts =
    steinbock = steinbock._cli:steinbock_cmd_group

[flake8]
max-line-length = 88
extend-ignore = E203
